<?xml version="1.0"?>
<package format="2">
  <name>auto_drive</name>
  <version>0.1.1</version>
  <description>This program is a very basic adaption of the bubble rebound algorithm on a turtlebot3 waffle (pi). It was created using ROS with C++ for the navigation system, and python for the user interface. I cannot state enough that this is a work in progress, I plan to keep woring on it in my spare time.</description>

  <maintainer email="samuelasquith@btinternet.com">sam</maintainer>


  <license>GPLv2</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>


  <export>

  </export>
</package>
